syntax = "proto3";
package sentinel.node.v3;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "sentinel/types/v1/status.proto";

option go_package = "github.com/sentinel-official/hub/v12/x/node/types/v3";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

message LeasePayout {
  int64 hours = 1;
  cosmos.base.v1beta1.Coin price = 2 [(gogoproto.nullable) = false];
  google.protobuf.Timestamp next_at = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}

message Lease {
  uint64 id = 1 [(gogoproto.customname) = "ID"];
  string prov_address = 2;
  string node_address = 3;
  int64 hours = 4;
  cosmos.base.v1beta1.Coin deposit = 5 [(gogoproto.nullable) = false];
  LeasePayout payout = 6 [(gogoproto.nullable) = false];
  sentinel.types.v1.Status status = 7;
  google.protobuf.Timestamp status_at = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Timestamp inactive_at = 9 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}
